src/app/snapshots/thurbox__app__acceptance__empty_welcome_screen_renders.snap
---
source: src/app/acceptance.rs
expression: h.render()
---
 thurbox  Multi-Session Agent Orchestrator  v0.0.0-dev                                    ◐ Default
╭ Sessions ─────────────╮┌ No Session ─────────────────────────────────────────────────────────────┐
│                       ││                                                                         │
│    No sessions yet    ││                                                                         │
│Press Ctrl+N to create ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                    ┌───────────────────────────────┐                    │
│                       ││                    │No active sessions             │                    │
│                       ││                    │                               │                    │
│                       ││                    │  Ctrl+N  New session          │                    │
│                       ││                    │  F1      Help                 │                    │
│                       ││                    └───────────────────────────────┘                    │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
╰───────────────────────╯│                                                                         │
┌ Automations ──────────┐│                                                                         │
│none                   ││                                                                         │
└───────────────────────┘└─────────────────────────────────────────────────────────────────────────┘
 Sessions  0 session(s)  ^H/^L Focus                 Help   Tasks   Files   Settings   Theme   Quit
