src/app/snapshots/thurbox__app__acceptance__theme_picker_filtered_shows_both_sections.snap
---
source: src/app/acceptance.rs
expression: h.render()
---
 thurbox  Multi-Session Agent Orchestrator  v0.0.0-dev                                    ◐ Default
╭ Sessions ─────────────╮┌ No Session ─────────────────────────────────────────────────────────────┐
│                       ││                                                                         │
│    No sessions yet    ││                                                                         │
│Press Ctrl+N to create ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                 ╭ Theme ───────────────────────────────────────────────────────╮                 │
│                 │ / light█                                         5/36 themes │                 │
│                 │ Light                        Accent      █████ █████         │                 │
│                 │▸ Gruvbox Light               Status      ◐ ◆ ● ○ ✗           │                 │
│                 │  Solarized Light             Text        Aa Aa Aa            │                 │
│                 │  Ayu Light                   Diff         +   -              │                 │
│                 │  One Light                   Border      ╭─────╮             │                 │
│                 │  GitHub Light                Modal bg                        │                 │
│                 │                                                              │                 │
│                 │  theme id: gruvbox-light                                     │                 │
│                 │↑/↓ navigate  type filter  Esc clear filter   Select   Cancel │                 │
│                 ╰──────────────────────────────────────────────────────────────╯                 │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
╰───────────────────────╯│                                                                         │
┌ Automations ──────────┐│                                                                         │
│none                   ││                                                                         │
└───────────────────────┘└─────────────────────────────────────────────────────────────────────────┘
 Sessions  Help · F1   Info · F2   Files · F3   Theme · F4   Tasks · F5   Settings · F6   Quit · ^Q
